deploy/aks/k8s/Complete-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-backend
  namespace: ssc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-backend
  template:
    metadata:
      labels:
        app: auth-backend
    spec:
      containers:
      - name: backend
        image: jgacr.azurecr.io/auth-backend:latest
        ports:
        - containerPort: 3010
        livenessProbe:
          httpGet:
            path: /health
            port: 3010
          initialDelaySeconds: 40
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 3010
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-backend
  namespace: ssc
spec:
  selector:
    app: auth-backend
  ports:
  - protocol: TCP
    port: 3010
    targetPort: 3010
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-frontend
  namespace: ssc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-frontend
  template:
    metadata:
      labels:
        app: auth-frontend
    spec:
      containers:
      - name: auth-frontend
        image: jgacr.azurecr.io/auth-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: auth-frontend
  namespace: ssc
spec:
  selector:
    app: auth-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
