deploy/aks/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-backend
  namespace: ssc
  labels:
    app: auth-backend
spec:
  type: ClusterIP
  ports:
  - port: 3010
    targetPort: 3010
    protocol: TCP
    name: http
  selector:
    app: auth-backend
