deploy/aks/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-frontend
  namespace: ssc
  labels:
    app: auth-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: auth-frontend
